# WebService

./: README.md  article.fixture.json  category.fixture.json  product.fixture.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/management/commands/: add_articles.py
blog/migrations/: 0001_initial.py
blog/template_tags/: my_tags.py
blog/templates/blog/: article_detail.html  article_list.html
blog/templates/blog/includes/: header.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/managenent/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contact_alter_product_image.py  0003_alter_product_options_product_is_published_and_more.py
catalog/templates/catalog/: add_product.html  base.html  category.html  contacts.html  home.html  single_prod.html
catalog/templates/catalog/includes/: header.html
config/: settings.py  urls.py
html/: catalogue.html  category.html  contacts.html  main.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_moderators_group.py  createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: logout.html  register.html
